--- a/projects/05-react-buscador-peliculas/src/App.css
+++ b/projects/05-react-buscador-peliculas/src/App.css
@@ -1,17 +1,47 @@
 .page {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-form{
-    display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    max-width: 800px;
 }
 
 main {
+    margin-top: 30px;
     display: flex;
-    width: 400px;
+    justify-content: center;
+    width: 100%;
+}
+
+form {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+.movies {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+
+    width: 100%;
+    gap: 32px;
+}
+
+.movie {
+    text-align: center;
+}
+
+.movie h3,
+.movie p {
+    margin: 0;
+}
+
+.movie img {
+    border-radius: 8px;
+    margin-top: 16px;
 }
